Z-index bug when using attributes fieldset fixed

--- a/css/linkit.css
+++ b/css/linkit.css
@@ -16,6 +16,12 @@ input#edit-link.with_imce {
   background-image: url(../throbber-active.gif);
 }
 
+/* The attributes fieldset thinks it's better than Better Autocomplete. It is not. */
+#linkit .form-item-search {
+  position: relative;
+  z-index: 1;
+}
+
 /* Better Autocomplete */
 
 .better-autocomplete > .results > .result img {
